--- a/package.json
+++ b/package.json
@@ -13,21 +13,30 @@
   "dependencies": {
     "@stylistic/eslint-plugin": "^5.2.3",
     "@tailwindcss/vite": "^4.1.12",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.6.0",
+    "@vueuse/integrations": "^13.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "lucide-vue-next": "^0.539.0",
+    "nanoid": "^5.1.5",
     "nuxt": "^4.0.3",
+    "qrcode": "^1",
     "reka-ui": "^2.4.1",
     "shadcn-nuxt": "2.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.6",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.2",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@nuxt/fonts": "^0.11.4",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
