--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@nuxt/fonts": "^0.11.4",
+    "@nuxt/icon": "^2.0.0",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-vue": "^10.4.0",
     "globals": "^16.3.0",
+    "nuxt-oidc-auth": "^1.0.0-beta.5",
     "typescript-eslint": "^8.39.1"
   }
 }
