--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "start": "bun run build && bun .output/server/index.mjs"
   },
   "dependencies": {
     "@stylistic/eslint-plugin": "^5.2.3",
