feat: add environment specification for deployment job in workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: production
     env:
       SSH_HOST: ${{ secrets.HOST }}
       SSH_PORT: ${{ secrets.SSH_PORT || '12018' }}
