--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     environment: production
     env:
       SSH_HOST: ${{ secrets.HOST }}
-      SSH_PORT: ${{ secrets.SSH_PORT || '12018' }}
+      SSH_PORT: ${{ secrets.SSH_PORT }}
       SSH_USER: ${{ secrets.SSH_USER }}
       SSH_KEY: ${{ secrets.SSH_KEY }}
       NUXT_WHITELISTED_USERS: ${{ secrets.NUXT_WHITELISTED_USERS }}
@@ -56,5 +56,5 @@ jobs:
 
             docker build --pull -t bjshrt-front .
             docker rm -f bjshrt-front-website 2>/dev/null || true
-            docker run -d --env-file .env.runtime --name bjshrt-front-website -p 58668:3000 --restart unless-stopped bjshrt-front
+            docker run -d --env-file .env.runtime --name bjshrt-front-website -p 55459:3000 --restart unless-stopped bjshrt-front
           EOF
