fix: add NUXT_OIDC_PROVIDERS_GITHUB_REDIRECT_URI to deployment environment variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
       NUXT_OIDC_SESSION_SECRET: ${{ secrets.NUXT_OIDC_SESSION_SECRET }}
       NUXT_OIDC_TOKEN_KEY: ${{ secrets.NUXT_OIDC_TOKEN_KEY }}
       NUXT_OIDC_AUTH_SESSION_SECRET: ${{ secrets.NUXT_OIDC_AUTH_SESSION_SECRET }}
+      NUXT_OIDC_PROVIDERS_GITHUB_REDIRECT_URI: ${{ secrets.NUXT_OIDC_PROVIDERS_GITHUB_REDIRECT_URI }}
 
     steps:
       - name: Checkout code
